crates/toml_edit/tests/snapshots/invalid/float/trailing-us-exp-01.stderr
TOML parse error at line 1, column 22
  |
1 | trailing-us-exp-1 = 1_e2
  |                      ^
`_` may only go between digits
